--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <div class="page home active" id="homePage">
     <h1>Selamat Datang di</h1>
     <h2>11 Saintek 4!</h2>
-    <button class="btn" onclick="goToGroups()">Menuju Daftar Siswa/i</button>
+    <button class="btn" onclick="goToGroups()">Menuju Daftar Project</button>
   </div>
 
   <div class="page group-page" id="groupPage">
