--- a/project/project1.html
+++ b/project/project1.html
@@ -20,6 +20,14 @@
       margin-top: 20px;
     }
 
+    .description {
+      max-width: 800px;
+      margin: 30px auto;
+      text-align: justify;
+      font-size: 16px;
+      line-height: 1.6;
+    }
+
     .btn {
       margin-top: 30px;
       padding: 10px 20px;
@@ -36,7 +44,16 @@
   <h1>Sistem Informasi Sekolah</h1>
   <p>Ini adalah tampilan project kelompok 1.</p>
   <img src="../images/project1.png" alt="Project Kelompok 1" />
-  <br />
+
+  <div class="description">
+    <p>
+      Sistem Informasi Sekolah ini dirancang untuk membantu pengelolaan data siswa, guru, dan jadwal pelajaran secara efisien dan terpusat. Melalui aplikasi ini, pihak sekolah dapat memasukkan, mengedit, dan melihat informasi penting terkait aktivitas akademik harian. Selain itu, terdapat fitur pengumuman dan dashboard statistik sederhana untuk mendukung manajemen sekolah berbasis digital.
+    </p>
+    <p>
+      Dalam pembuatan project ini, kami menggunakan HTML dan CSS untuk antarmuka pengguna, serta struktur halaman yang responsif. Project ini bertujuan sebagai representasi digitalisasi manajemen sekolah yang dapat dikembangkan lebih lanjut menggunakan backend seperti PHP atau database seperti MySQL di masa depan.
+    </p>
+  </div>
+
   <button class="btn" onclick="history.back()">Kembali</button>
 </body>
 </html>
