--- a/project/project1.html
+++ b/project/project1.html
@@ -12,20 +12,31 @@
       padding: 20px;
     }
 
+    h1 {
+      font-size: 32px;
+    }
+
+    h3 {
+      font-size: 20px;
+      color: #e0e7ff;
+      margin-top: 10px;
+    }
+
+    p {
+      margin-top: 10px;
+      font-size: 16px;
+      line-height: 1.6;
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
     img {
       max-width: 100%;
       height: auto;
       border: 4px solid white;
       border-radius: 12px;
       margin-top: 20px;
-    }
-
-    .description {
-      max-width: 800px;
-      margin: 30px auto;
-      text-align: justify;
-      font-size: 16px;
-      line-height: 1.6;
     }
 
     .btn {
@@ -42,17 +53,13 @@
 </head>
 <body>
   <h1>Sistem Informasi Sekolah</h1>
-  <p>Ini adalah tampilan project kelompok 1.</p>
+  <h3>Project Kelompok 1 - Kelas 11 Saintek 4</h3>
+
+  <p>Project ini bertujuan untuk membuat prototipe sistem informasi sekolah berbasis web, yang menampilkan informasi jadwal pelajaran, data siswa, guru, dan keuangan sekolah. Proyek ini dirancang sebagai bagian dari tugas kelompok dan bertujuan untuk melatih kemampuan dasar HTML dan CSS.</p>
+
   <img src="../images/project1.png" alt="Project Kelompok 1" />
 
-  <div class="description">
-    <p>
-      Sistem Informasi Sekolah ini dirancang untuk membantu pengelolaan data siswa, guru, dan jadwal pelajaran secara efisien dan terpusat. Melalui aplikasi ini, pihak sekolah dapat memasukkan, mengedit, dan melihat informasi penting terkait aktivitas akademik harian. Selain itu, terdapat fitur pengumuman dan dashboard statistik sederhana untuk mendukung manajemen sekolah berbasis digital.
-    </p>
-    <p>
-      Dalam pembuatan project ini, kami menggunakan HTML dan CSS untuk antarmuka pengguna, serta struktur halaman yang responsif. Project ini bertujuan sebagai representasi digitalisasi manajemen sekolah yang dapat dikembangkan lebih lanjut menggunakan backend seperti PHP atau database seperti MySQL di masa depan.
-    </p>
-  </div>
+  <p>Kami menggunakan HTML sebagai dasar struktur halaman dan CSS untuk memberikan desain tampilan yang rapi dan responsif. Dengan project ini, kami belajar banyak mengenai tata letak halaman, penggunaan elemen-elemen web, serta struktur penyusunan konten yang baik.</p>
 
   <button class="btn" onclick="history.back()">Kembali</button>
 </body>
