--- a/project/project2.html
+++ b/project/project2.html
@@ -33,7 +33,8 @@
   </style>
 </head>
 <body>
-  <h1>Aplikasi Kesehatan Sederhana</h1>
+  <h1>Mini Refrigerator</h1>
+  <h2>Mini Refrigerator merupakan project refrigator kecil dengan sistem pendinginan peltier yang merupakan teknologi pendinginan mutakhir</h2>
   <p>Ini adalah tampilan project kelompok 2.</p>
   <img src="../images/project2.png" alt="Project Kelompok 2" />
   <br />
