--- a/project/project1.html
+++ b/project/project1.html
@@ -52,10 +52,10 @@
   </style>
 </head>
 <body>
-  <h1>Sistem Informasi Sekolah</h1>
+  <h1>Smart Agriculture Irrigation System</h1>
   <h3>Project Kelompok 1 - Kelas 11 Saintek 4</h3>
 
-  <p>Project ini bertujuan untuk membuat prototipe sistem informasi sekolah berbasis web, yang menampilkan informasi jadwal pelajaran, data siswa, guru, dan keuangan sekolah. Proyek ini dirancang sebagai bagian dari tugas kelompok dan bertujuan untuk melatih kemampuan dasar HTML dan CSS.</p>
+  <p>Project ini bertujuan untuk membuat prototipe web, yang menampilkan informasi jadwal pelajaran, data siswa, guru, dan keuangan sekolah. Proyek ini dirancang sebagai bagian dari tugas kelompok dan bertujuan untuk melatih kemampuan dasar HTML dan CSS.</p>
 
   <img src="../images/project1.png" alt="Project Kelompok 1" />
 
