--- a/project/project2.html
+++ b/project/project2.html
@@ -12,6 +12,25 @@
       padding: 20px;
     }
 
+    h1 {
+      font-size: 32px;
+    }
+
+    h3 {
+      font-size: 20px;
+      color: #e0e7ff;
+      margin-top: 10px;
+    }
+
+    p {
+      margin-top: 10px;
+      font-size: 16px;
+      line-height: 1.6;
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
     img {
       max-width: 100%;
       height: auto;
@@ -34,10 +53,14 @@
 </head>
 <body>
   <h1>Mini Refrigerator</h1>
-  <h2>Mini Refrigerator merupakan project refrigator kecil dengan sistem pendinginan peltier yang merupakan teknologi pendinginan mutakhir</h2>
-  <p>Ini adalah tampilan project kelompok 2.</p>
-  <img src="../images/project2.png" alt="Project Kelompok 2" />
-  <br />
+  <h3>Project Kelompok 2 - Kelas 11 Saintek 4</h3>
+
+  <p>Project ini bertujuan untuk membuat prototipe sistem informasi sekolah berbasis web, yang menampilkan informasi jadwal pelajaran, data siswa, guru, dan keuangan sekolah. Proyek ini dirancang sebagai bagian dari tugas kelompok dan bertujuan untuk melatih kemampuan dasar HTML dan CSS.</p>
+
+  <img src="../images/project1.png" alt="Project Kelompok 1" />
+
+  <p>Kami menggunakan HTML sebagai dasar struktur halaman dan CSS untuk memberikan desain tampilan yang rapi dan responsif. Dengan project ini, kami belajar banyak mengenai tata letak halaman, penggunaan elemen-elemen web, serta struktur penyusunan konten yang baik.</p>
+
   <button class="btn" onclick="history.back()">Kembali</button>
 </body>
 </html>
