--- a/project/project1.html
+++ b/project/project1.html
@@ -40,14 +40,30 @@
     }
 
     .btn {
-      margin-top: 30px;
-      padding: 10px 20px;
+      display: inline-block;
+      margin-top: 40px;
+      padding: 15px 40px;
       background-color: white;
       color: #2563eb;
       border: none;
-      border-radius: 10px;
+      border-radius: 12px;
       font-weight: bold;
+      font-size: 18px;
       cursor: pointer;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      transition: transform 0.2s, background-color 0.2s;
+    }
+
+    .btn:hover {
+      background-color: #e0e7ff;
+      transform: scale(1.05);
+    }
+
+    @media (max-width: 600px) {
+      .btn {
+        width: 100%;
+        font-size: 20px;
+      }
     }
   </style>
 </head>
@@ -55,12 +71,16 @@
   <h1>Smart Agriculture Irrigation System</h1>
   <h3>Project Kelompok 1 - Kelas 11 Saintek 4</h3>
 
-  <p>Project ini bertujuan untuk membuat prototipe web, yang menampilkan informasi jadwal pelajaran, data siswa, guru, dan keuangan sekolah. Proyek ini dirancang sebagai bagian dari tugas kelompok dan bertujuan untuk melatih kemampuan dasar HTML dan CSS.</p>
+  <p>
+    Project ini bertujuan untuk membuat prototipe sistem informasi sekolah berbasis web, yang menampilkan informasi jadwal pelajaran, data siswa, guru, dan keuangan sekolah. Proyek ini dirancang sebagai bagian dari tugas kelompok dan bertujuan untuk melatih kemampuan dasar HTML dan CSS.
+  </p>
 
   <img src="../images/project1.png" alt="Project Kelompok 1" />
 
-  <p>Kami menggunakan HTML sebagai dasar struktur halaman dan CSS untuk memberikan desain tampilan yang rapi dan responsif. Dengan project ini, kami belajar banyak mengenai tata letak halaman, penggunaan elemen-elemen web, serta struktur penyusunan konten yang baik.</p>
+  <p>
+    Kami menggunakan HTML sebagai dasar struktur halaman dan CSS untuk memberikan desain tampilan yang rapi dan responsif. Dengan project ini, kami belajar banyak mengenai tata letak halaman, penggunaan elemen-elemen web, serta struktur penyusunan konten yang baik.
+  </p>
 
-  <button class="btn" onclick="history.back()">Kembali</button>
+  <button class="btn" onclick="history.back()">← Kembali ke Daftar Kelompok</button>
 </body>
 </html>
