--- a/project/project1.html
+++ b/project/project1.html
@@ -71,15 +71,40 @@
 <body>
   <h1>Smart Agriculture Irrigation System</h1>
   <h3>Project Kelompok 1 - Kelas 11 Saintek 4</h3>
-
-  <p>
-    Project ini bertujuan untuk membuat prototipe sistem informasi sekolah berbasis web, yang menampilkan informasi jadwal pelajaran, data siswa, guru, dan keuangan sekolah. Proyek ini dirancang sebagai bagian dari tugas kelompok dan bertujuan untuk melatih kemampuan dasar HTML dan CSS.
-  </p>
-
+  
   <img src="../images/project1.png" alt="Project Kelompok 1" />
 
   <p>
-    Kami menggunakan HTML sebagai dasar struktur halaman dan CSS untuk memberikan desain tampilan yang rapi dan responsif. Dengan project ini, kami belajar banyak mengenai tata letak halaman, penggunaan elemen-elemen web, serta struktur penyusunan konten yang baik.
+    <strong>Smart Agriculture Irrigation System</strong> adalah sistem otomatisasi irigasi berbasis sensor kelembaban tanah yang dirancang untuk membantu para petani dalam mengelola kebutuhan air tanaman secara efisien. Dengan teknologi ini, irigasi akan aktif secara otomatis hanya ketika kelembaban tanah berada di bawah ambang batas tertentu.
+  </p>
+
+  <p>
+    <strong>Tujuan:</strong> Menghemat penggunaan air, meningkatkan hasil pertanian, dan meminimalkan tenaga kerja manusia dengan bantuan teknologi otomatisasi.
+  </p>
+
+  <p>
+    <strong>Komponen yang Digunakan:</strong>
+    <ul style="text-align: left; max-width: 700px; margin: 10px auto;">
+      <li>Sensor Kelembaban Tanah (Soil Moisture Sensor v1.2)</li>
+      <li>Mikrokontroler Arduino UNO</li>
+      <li>Pompa Air DC</li>
+      <li>Relay</li>
+      <li>Kabel Jumper</li>
+      <li>Holder Baterai</li>
+    </ul>
+  </p>
+
+  <p>
+    <strong>Cara Kerja:</strong> Sensor kelembaban tanah akan mendeteksi kadar air di tanah. Jika nilai kelembaban di bawah ambang batas, Arduino akan mengaktifkan pompa air melalui relay untuk mengairi tanah. Setelah kelembaban kembali normal, pompa akan mati.
+  </p>
+
+  <p>
+    <strong>Manfaat:</strong>
+    <ul style="text-align: left; max-width: 700px; margin: 10px auto;">
+      <li>Hemat air dan listrik</li>
+      <li>Meningkatkan efisiensi waktu dan tenaga</li>
+      <li>Dapat dikembangkan menjadi sistem skala besar</li>
+    </ul>
   </p>
 
   <button class="btn" onclick="history.back()">← Kembali ke Daftar Kelompok</button>
