--- a/project/project2.html
+++ b/project/project2.html
@@ -32,6 +32,14 @@
       text-align: justify;
     }
 
+    ul {
+      list-style-type: disc;
+      margin: 10px auto;
+      padding-left: 40px;
+      max-width: 700px;
+      text-align: left;
+    }
+
     img {
       max-width: 100%;
       height: auto;
@@ -72,15 +80,27 @@
   <h1>Mini Refrigerator</h1>
   <h3>Project Kelompok 2 - Kelas 11 Saintek 4</h3>
 
-  <p>
-    Project ini bertujuan untuk membuat prototipe sistem informasi sekolah berbasis web, yang menampilkan informasi jadwal pelajaran, data siswa, guru, dan keuangan sekolah. Proyek ini dirancang sebagai bagian dari tugas kelompok dan bertujuan untuk melatih kemampuan dasar HTML dan CSS.
-  </p>
-
   <img src="../images/project2.png" alt="Project Kelompok 2" />
 
   <p>
-    Kami menggunakan HTML sebagai dasar struktur halaman dan CSS untuk memberikan desain tampilan yang rapi dan responsif. Dengan project ini, kami belajar banyak mengenai tata letak halaman, penggunaan elemen-elemen web, serta struktur penyusunan konten yang baik.
+    Project ini merupakan implementasi teknologi pendinginan menggunakan <strong>Peltier TEC1-12706</strong> dan sistem <em>water cooling</em> dalam bentuk kulkas mini. Kami menggunakan kaleng kerupuk bekas sebagai ruang isolasi, menjadikannya tempat penyimpanan yang dingin dan efisien.
   </p>
+
+  <p>
+    Di sisi panas dari Peltier, kami tempelkan <strong>waterblock</strong> yang disertai <strong>heatsink tambahan</strong> dan fan untuk mempercepat pelepasan panas. Air didinginkan dan dipompa dengan <strong>waterpump</strong>. Di sisi dingin, terdapat <strong>heatsink kecil</strong> yang meniupkan udara dingin ke dalam ruang tertutup di dalam kaleng, menciptakan efek lemari es mini.
+  </p>
+
+  <p><strong>Komponen yang digunakan:</strong></p>
+  <ul>
+    <li>Peltier (TEC1-12706)</li>
+    <li>Waterblock</li>
+    <li>Heatsink (2×)</li>
+    <li>Waterpump</li>
+    <li>Thermal foam</li>
+    <li>Thermal tape</li>
+    <li>Kabel & jack barrel</li>
+    <li>Adaptor 12V 8A (96W)</li>
+  </ul>
 
   <button class="btn" onclick="history.back()">← Kembali ke Daftar Kelompok</button>
 </body>
