--- a/project/project2.html
+++ b/project/project2.html
@@ -83,7 +83,7 @@
   <img src="../images/project2.png" alt="Project Kelompok 2" />
 
   <p>
-    Project ini merupakan implementasi teknologi pendinginan menggunakan <strong>Peltier TEC1-12706</strong> dan sistem <em>water cooling</em> dalam bentuk kulkas mini. Kami menggunakan kaleng kerupuk bekas sebagai ruang isolasi, menjadikannya tempat penyimpanan yang dingin dan efisien.
+    Project ini merupakan implementasi teknologi pendinginan menggunakan <strong>Peltier TEC1-12706</strong> dan sistem <em>water cooling</em> dalam bentuk kulkas mini. Kami menggunakan kaleng kerupuk bekas sebagai wadah, dan thermal foam untuk menciptakan ruang isolasi, menjadikannya tempat penyimpanan yang dingin dan mutakhir.
   </p>
 
   <p>
