--- a/project/project3.html
+++ b/project/project3.html
@@ -72,14 +72,41 @@
   <h1>Smoke & Flame Detector</h1>
   <h3>Project Kelompok 3 - Kelas 11 Saintek 4</h3>
 
-  <p>
-    Project ini bertujuan untuk membuat prototipe sistem informasi sekolah berbasis web, yang menampilkan informasi jadwal pelajaran, data siswa, guru, dan keuangan sekolah. Proyek ini dirancang sebagai bagian dari tugas kelompok dan bertujuan untuk melatih kemampuan dasar HTML dan CSS.
-  </p>
-
   <img src="../images/project3.png" alt="Project Kelompok 3" />
 
   <p>
-    Kami menggunakan HTML sebagai dasar struktur halaman dan CSS untuk memberikan desain tampilan yang rapi dan responsif. Dengan project ini, kami belajar banyak mengenai tata letak halaman, penggunaan elemen-elemen web, serta struktur penyusunan konten yang baik.
+    <strong>Deskripsi Singkat:</strong><br>
+    Smoke & Flame Detector adalah sistem pendeteksi asap dan api berbasis Arduino UNO yang dirancang untuk mengidentifikasi aktivitas seperti merokok atau membakar korek api di area rawan seperti kamar mandi sekolah. Sistem ini menggunakan sensor MQ-2 dan flame sensor untuk mendeteksi keberadaan asap atau api, kemudian memberikan peringatan melalui buzzer dan menampilkan status pada layar LCD.
+  </p>
+
+  <p>
+    <strong>Tujuan Proyek:</strong><br>
+    - Mendeteksi asap rokok atau api korek di area rawan.<br>
+    - Mencegah tindakan menyimpang seperti merokok oleh siswa.<br>
+    - Memberikan peringatan dini secara otomatis.
+  </p>
+
+  <p>
+    <strong>Komponen yang Digunakan:</strong><br>
+    - Arduino UNO<br>
+    - Sensor MQ-2 (asap/gas)<br>
+    - Flame Sensor (api)<br>
+    - LCD 16×2<br>
+    - Buzzer Passive<br>
+    - Breadboard & Kabel Jumper<br>
+    - Casing dari wadah tempat makan bekas (dicat untuk tampilan menarik)
+  </p>
+
+  <p>
+    <strong>Cara Kerja Sistem:</strong><br>
+    Sensor MQ-2 dan flame sensor akan memantau udara dan lingkungan sekitar. Jika salah satu atau keduanya mendeteksi asap atau api, Arduino akan mengaktifkan buzzer dengan suara panjang sebagai alarm dan menampilkan status deteksi di layar LCD. Sistem akan terus aktif hingga kondisi kembali normal.
+  </p>
+
+  <p>
+    <strong>Manfaat Sistem:</strong><br>
+    - Mendeteksi dini potensi pelanggaran atau bahaya kebakaran.<br>
+    - Meningkatkan pengawasan di area tersembunyi.<br>
+    - Mudah dirakit, hemat biaya, dan ramah lingkungan berkat penggunaan barang bekas sebagai casing.
   </p>
 
   <button class="btn" onclick="history.back()">← Kembali ke Daftar Kelompok</button>
